SC/13: convert to LaTeX

--- a/docs/sc/013/sc13.bib
+++ b/docs/sc/013/sc13.bib
@@ -216,7 +216,7 @@
   volume =	 18,
   number =	 2,
   pages =	 {139--174},
-  url =		 {http://http.cs.berkeley.edu/%7Ejhauser/exceptions/HandlingFloatingPointExceptions.html}
+  url =		 {http://http.cs.berkeley.edu/\%7Ejhauser/exceptions/HandlingFloatingPointExceptions.html}
 }
 
 
@@ -228,7 +228,7 @@
   type = 	 {Lecture notes},
   institution =  {University of California, Berkeley},
   year = 	 1996,
-  url =	 {http://http.cs.berkeley.edu/%7Ewkahan/ieee754status/ieee754.ps}
+  url =	 {http://http.cs.berkeley.edu/\%7Ewkahan/ieee754status/ieee754.ps}
 }
 
 
@@ -238,5 +238,5 @@
   type =	{Lecture Notes},
   institution = {University of California, Berkeley},
   year = 	1996,
-  url =	{http://www.cs.berkeley.edu/%7Edemmel/cs267/lecture21/lecture21.html}
+  url =	{http://www.cs.berkeley.edu/\%7Edemmel/cs267/lecture21/lecture21.html}
 }
